--- a/styles/Subbab.css
+++ b/styles/Subbab.css
@@ -253,7 +253,7 @@ main p{
   background-color: var(--text-color);/* #5cc6c6; */
   color: var(--bg-color);
   font-weight: bold;
-  font-size: large;
+  font-size: ;
   padding: 4px 10px; 
   border: 2px solid var(--text-color); 
   border-radius: 5px; 
@@ -303,6 +303,24 @@ main p{
 
 #home{
   background-color: rgba(255, 255, 255, 0.85);
+  /* background-color:; */
+  border-radius: 10px;
+  margin:20px;
+  border:black 1px solid;
+  padding: 20px;
+  font-family: Tahoma;
+}
+#homeContoh{
+  background-color: rgba(210, 210, 210, 0.85);
+  /* background-color:; */
+  border-radius: 10px;
+  margin:20px;
+  border:black 1px solid;
+  padding: 20px;
+  font-family: Tahoma;
+}
+#homeSoal{
+  background-color: rgba(255, 139, 139, 0.85);
   /* background-color:; */
   border-radius: 10px;
   margin:20px;
