--- a/styles/Subbab.css
+++ b/styles/Subbab.css
@@ -253,7 +253,7 @@ main p{
   background-color: var(--text-color);/* #5cc6c6; */
   color: var(--bg-color);
   font-weight: bold;
-  font-size: ;
+  /* font-size: ; */
   padding: 4px 10px; 
   border: 2px solid var(--text-color); 
   border-radius: 5px; 
@@ -320,7 +320,7 @@ main p{
   font-family: Tahoma;
 }
 #homeSoal{
-  background-color: rgba(255, 139, 139, 0.85);
+  background-color: rgba(253, 172, 172, 0.85);
   /* background-color:; */
   border-radius: 10px;
   margin:20px;
