--- a/styles/Subbab.css
+++ b/styles/Subbab.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.cdnfonts.com/css/latin-modern-sans');
 @font-face {
-  font-family: HYWenHei;
+  font-family:'Courier New';
   src: url(zhcn.ttf);
 }
 
@@ -65,7 +65,7 @@ html{
 }
 
 body {
-  font-family: 'LMSansDemiCond10', sans-serif;
+  font-family:'Times New Roman';
   min-height: 100vh;
   min-height: 100dvh;
   background-color: var(--bg-color);
